kubernetes/staging/webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sureback-webserver
  labels:
    tier: backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: backend
        layer: webserver
    spec:
      containers:
        - name: webserver
          image: asia-southeast2-docker.pkg.dev/sureback-ilb22/sureback/sureback-web_server-staging:latest
          # imagePullPolicy: Never
          ports:
            - containerPort: 80
