kubernetes/staging/webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sureback-webserver
  namespace: sureback-mfahmialkautsar
spec:
  selector:
    tier: backend
    layer: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
